--- a/aws_amplify_grahql/.graphqlconfig.yml
+++ b/aws_amplify_grahql/.graphqlconfig.yml
@@ -1,6 +1,6 @@
 projects:
   awsamplifygrahql:
-    schemaPath: src/graphql/schema.json
+    schemaPath: amplify/backend/api/awsamplifygrahql/build/schema.graphql
     includes:
       - src/graphql/**/*.js
     excludes:
@@ -10,6 +10,9 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+        region: us-east-1
+        apiId: null
+        maxDepth: 2
 extensions:
   amplify:
     version: 3
